--- a/RepositoryParser/RepositoryParser/Properties/Resources.resx
+++ b/RepositoryParser/RepositoryParser/Properties/Resources.resx
@@ -141,6 +141,10 @@
     <value>Analyse</value>
     <comment>AnalisysPage</comment>
   </data>
+  <data name="Changes" xml:space="preserve">
+    <value>Changes</value>
+    <comment>DifferencesPage</comment>
+  </data>
   <data name="ChartWindowTitle" xml:space="preserve">
     <value>Analysis of activity of the repository users</value>
     <comment>ChartPage</comment>
@@ -192,6 +196,10 @@
   <data name="DifferencesButton" xml:space="preserve">
     <value>Compare</value>
     <comment>AnalysisPage</comment>
+  </data>
+  <data name="DifferenceWindowTitle" xml:space="preserve">
+    <value>Comparsion</value>
+    <comment>DifferencesPage</comment>
   </data>
   <data name="ExportToFileButton" xml:space="preserve">
     <value>Export to the File</value>
