--- a/RepositoryParser/RepositoryParser/Properties/Resources.pl-PL.resx
+++ b/RepositoryParser/RepositoryParser/Properties/Resources.pl-PL.resx
@@ -229,9 +229,25 @@
     <value>Wybierz repozytorium:</value>
     <comment>AnalysisPage</comment>
   </data>
+  <data name="Hour" xml:space="preserve">
+    <value>Godzina</value>
+    <comment>HourAcitvityChartPage</comment>
+  </data>
   <data name="HourActivityAnalyseButton" xml:space="preserve">
     <value>Analiza wg godzin</value>
     <comment>AnalysisPage</comment>
+  </data>
+  <data name="HoursActivityChartChart" xml:space="preserve">
+    <value>Wykres aktywności według godzin:</value>
+    <comment>HourAcitvityChartPage</comment>
+  </data>
+  <data name="HoursActivityChartList" xml:space="preserve">
+    <value>Lista aktywności według godzin:</value>
+    <comment>HourAcitvityChartPage</comment>
+  </data>
+  <data name="HoursActivityWindowTitle" xml:space="preserve">
+    <value>Analiza aktywności według godzin:</value>
+    <comment>HourAcitvityChartPage</comment>
   </data>
   <data name="Legend" xml:space="preserve">
     <value>Legenda:</value>
